Deployment Configuration AWS

--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -753,7 +753,10 @@
     "\n",
     "# print columns\n",
     "print('We have {} numerical features : {}'.format(len(numeric_features), numeric_features))\n",
-    "print('\\nWe have {} categorical features : {}'.format(len(categorical_features), categorical_features))"
+    "print('\\nWe have {} categorical features : {}'.format(len(categorical_features), categorical_features))\n",
+    "\n",
+    "# print(f'We have {len(numeric_features)} numerical features : {numeric_features}')\n",
+    "# print(f'\\nWe have {len(categorical_features)} categorical features : {categorical_features}')"
    ]
   },
   {
@@ -2038,7 +2041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
